# KinectTouch

./: CMakeLists.txt  niConfig.xml
src/: KinectTouch.cpp
